--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@wdio/cucumber-framework": "^8.39.0",
     "@wdio/local-runner": "^8.39.0",
     "@wdio/spec-reporter": "^8.39.0",
+    "appium": "^2.10.3",
     "appium-uiautomator2-driver": "^3.5.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.2"
   },
   "dependencies": {
     "@cucumber/cucumber": "^10.8.0",
+    "@wdio/globals": "^8.39.0",
     "cucumber": "^6.0.7"
   }
 }
